Fixing badge z-index and spaces everywhere

--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -14,6 +14,9 @@
     justify-content: flex-start;
 }
 
+.badge{
+    z-index: 0;
+}
 
 
 .removeIcon-cart:hover {
@@ -76,6 +79,7 @@
     width: 40%;
     padding-left: 50px;
     padding-top: 25px;
+    flex: 60%;
 }
 
 .category{
@@ -106,17 +110,18 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .pricePerItem{
-    flex: 70%;
-     flex-wrap: nowrap;
-     flex-shrink: 0;
+    flex: 50%;
+    flex-wrap: nowrap;
+    flex-shrink: 0;
 }
 
 .addIcon{
-    flex:30%
+    flex:50%;
+    padding-right:100px;
 }
 
 
@@ -300,12 +305,12 @@
     }
     
     .item-left{
-        flex: 60%;
+        flex: 50%;
          width: 100%;
     }
     
     .item-right{
-        flex: 40%;
+        flex: 50%;
         width: 100%;
     }
    
@@ -324,6 +329,10 @@
 
     .removeIcon-cart{
         padding: 2px;
+    }
+
+    .addIcon{
+        padding-right:0px;
     }
 
     .addIcon-cart{
